web-infras/parser/tests/fixtures/babel/es2015/meta-properties/new-target-invalid-escaped-new/output.txt
[SyntaxError]: keyword can not have any escap unicode (1,16)
1|function f() { n\u0065w.target; }
 |              ^
